syntax = "proto3";
package user;
import "google/protobuf/timestamp.proto";

service UserService {
    rpc GetUserBuyerWithEmail (GetUserBuyerWithEmailRequest) returns (BuyerData) {}
    rpc GetUserBuyerWithUsername (GetUserBuyerWithUsernameRequest) returns (BuyerData) {}
}

message GetUserBuyerWithEmailRequest {
  string email = 1;
}
message GetUserBuyerWithUsernameRequest {
  string username = 1;
}

message BuyerData {
  string id = 1;
  string username = 2;
  string email = 3;
  string profile_public_id = 4;
  string country = 5;
  bool is_seller = 6;
  repeated string purchased_gigs = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}